<resources>
    <string name="app_name">Library</string>
    <string name="empty_view_subtitle_text">Please add some books</string>
    <string name="empty_view_title_text">It\'s so empty here</string>
    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Book\'s name</string>
    <string name="hint_book_price">Price</string>
    <string name="year">Publication year</string>
    <string name="editor_activity_title_new_book">Add book</string>
    <string name="category_quantity">Quantity</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_supplier_name">Supplier name</string>
    <string name="unit_supplier_phone">Phone Number</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_delete_all_entries">Delete all books</string>

    <!-- Toast message in editor when new pet has been successfully inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_successful">Book saved</string>
    <!-- Toast message in editor when new pet has failed to be inserted [CHAR LIMIT=NONE] -->
    <string name="editor_insert_book_failed">Error with saving book</string>
    <string name="action_save">Save book</string>
    <string name="action_delete">Delete book</string>
    <string name="editor_activity_title_edit_book">Edit Book</string>
    <string name="editor_update_book_failed">Update book failed</string>
    <string name="editor_update_book_successful">Update book successful</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep editing</string>
    <string name="delete_dialog_msg">Delete this book?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>

    <!-- Toast message in editor when current pet was successfully deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_successful">Book deleted</string>

    <!-- Toast message in editor when current pet has failed to be deleted [CHAR LIMIT=NONE] -->
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="down_quantity">Quantity -1</string>
    <string name="up_quantity">Quantity +1</string>
    <string name="button_up_text">+</string>
    <string name="button_down_text">-</string>
    <string name="no_product_in_stock">No product in stock</string>
    <string name="toast_out_of_stock_msg">Product out of stock</string>
    <string name="order_book">Order this book from supplier</string>
    <string name="default_quantity">0</string>
    <string name="illegal_quantity_toast">Quantity can\'t be negative!</string>
    <string name="no_quantity_toast">No quantity inserted. Set to default (1)</string>
    <string name="enter_all_field">Please, fill al the field required</string>
    <string name="buy_book">Buy</string>

</resources>
